# Ann

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  a.py  experiment.py  test.sh
.github/workflows/: cmake-multi-platform.yml  cmake-test.yml  main.yml
Config/: Ann-H-Private.cmake.in  Ann-H.cmake.in  Ann.cmake.in  CL-Ann-H.cmake.in  CL-Ann.cmake.in  MMap-H.cmake.in  MMap.cmake.in  VK-Ann-H.cmake.in  VK-Ann.cmake.in
cmake/: CL-Core.cmake  CL-Core.cmake.hpp  CL-CoreConfig.py  Core.cmake  Core.cmake.hpp
inc/ae2f/Ann/: Act.h  Conv.h  LcgRand.h  Mhattn.core.h  Mhattn.h  Mlp.core.h  Mlp.h  Slp.core.h  Slp.h  Util.h
inc/ae2f/Ann/Mlp.h.cxx/: imp.hh
inc/ae2f/Ann/Sp.h.c/: cleandef.h
inc/ae2f/Ann/Sp.h.cxx/: imp.hh  mSp.hh
inc/ae2f/MMap/: MMap.h
inc/ae2fCL/Ann/: Mlp.h
inc/ae2fCL/Ann/Slp.h.cxx/: Slp.hh  imp.hh
inc/ae2fCL/Ann/Sp.h.cxx/: Sp.hh  mSp.hh
inc/ae2fVK/Ann/: Mlp.core.h  Mlp.h  README.md  Slp.core.h  Slp.h
include/ae2f/Ann/: Act.h  Conv.h  LcgRand.h  Mlp.h  Slp.h  Sp.h
include/ae2f/Ann/Mlp.h.cxx/: Mlp.hh  imp.hh  mMlp.hh
include/ae2f/Ann/Slp.h.cxx/: Slp.hh  imp.hh  mSlp.hh
include/ae2f/Ann/Sp.h.c/: clean.script.h
include/ae2f/Ann/Sp.h.cxx/: Sp.hh  imp.hh  mSp.hh
include/ae2f/MMap/: MMap.h
include/ae2f/MMap/MMap.x/: MMap.hh  imp.hh  mMMap.hh
include/ae2fCL/: Ann.h
include/ae2fCL/Ann/: Act.h  LcgRand.h  Mlp.h  Perc.h  Perc.hpp  Slp.h  Slp.hpp  SlpMultiple.h  Sp.h  Sp.hpp
include/ae2fCL/Ann/Sizes/: ae2f_float_t.h  cl_mem.h
include/ae2fCL/Ann/Slp/: Slp.hpp  SlpEl.hpp  imp.hpp
include/ae2fCL/Ann/Slp.h.cxx/: Slp.hpp  SlpEl.hpp  imp.hh  imp.hpp  mSlp.hh
include/ae2fCL/Ann/Sp/: C.hpp  Sp.hpp  imp.hpp
include/ae2fCL/Ann/Sp.h.cxx/: Sp.hh  Sp.hpp  imp.hh  imp.hpp
src/: Ann.c  LcgRand.c  Mlp.c  Perc.c  Slp.c  SlpMultiple.c  Sp.c
src/CLCode/: Act.cl.c  Act.h  Perc.cl.c  Perc.h  Rand.h  Slp.cl.c  Slp.cl.h  Slp.h  Sp.cl.c  Sp.cl.h
src/ann/: Conv.c  Conv.def.cc  Conv.imp.c  LcgRand.c  Mhattn.def.c  Mhattn.def.cc  Mlp.c  Mlp.def.c  Mlp.def.cc  Mlp.imp.c  Slp.c  Slp.def.c  Slp.def.cc  Slp.imp.c  Sp.c  Sp.h
src/ann-h/: Mlp.h  Slp.h  Sp.h
src/ann-h/Mlp/: HidCompute.h  HidErr.h  OutCompute.h  Predict.h
src/ann/Mlp/: HidErr.h
src/cl/: Ann.c  Mlp.c  Slp.c  Sp.c
src/cl/CLCode/: Slp.cl.c  Slp.cl.h  Sp.cl.c  Sp.cl.h  uf.h
src/mmap/: MMap.c  MMap.def.c  MMap.imp.c  Util.h.in
src/vk/: Mlp.def.cc  Mlp.inc.cc  MlpPool.def.cc  MlpSHADER.inc.c  Slp.def.cc  Slp.glsl  Slp.imp.c  Slp.inc.cc  SlpPool.def.cc  SlpSHADER.inc.c
src/vk/cl/: Mlp.cl.c  Mlp.h  Slp.cl.c  Slp.cl.i  Slp.h  a.spv  err  mac.h
src/vk/glsl/: Slp.glsl  mac.h
test/: test.h  vk.h
test/ann/: Conv.c  MlpTrainAND-Primal.c  MlpTrainXOR-Made-Primal.c  MlpTrainXOR-Primal.c  MlpTrainXOR.c  MlpTrainXOR.c.cc  MlpTrainXOR.cc  MlpTrainXORFour.cc  SlpTrainAND.c  SlpTrainAND.cc
test/cl-src/: LeakOnEasyInit.c  LeakOnRegularInit.c  MlpTrainXOR.c  MlpTrainXOR.cc  PercMk.cc  SlpLeak.c  SlpMk.cc  SlpTrainAND.c  SlpTrainTest.cc  SpTrainAND.c  __.cc  __defaule_logistic.cc  clGetPlatformIDHasLeak.c
test/src/: Conv.c  MlpTent.c  MlpTrain.c  MlpTrainAND.c  MlpTrainAND.cc  MlpTrainXOR.c  MlpTrainXOR.cc  PercMk.c  PercMk.cc  PercMkRaw.c  PercTrain.c  PercTrain.cc  PercTrain.cxx  SizeCheck.c  SlpTent.c  SlpTrainAND.c  SlpTrainAND.cc  SpTrainAND.c  TestTent.cc  default.c  iscpp.cc
test/vk/: MlpInit.c  MlpInitSz.c  MlpSz.c  MlpTrainHalf-Primal.c  MlpTrainSimple-Primal.c  SlpInit-Primal.c  SlpInit-Primal.c.cc  SlpPredict-Primal.c  SlpPredictHalf-Primal.c  SlpSz.c  SlpTrain-Primal.c  SlpTrainAND-Primal.c  VkInit.c
